- fixed memory leak in SoPlex LP interface when requesting an unbounded solution
- fixed memory leak in SoPlex LP interface when solving with LP scaling
- fixed memory leaks in reader of TSP example 
- fixed bug while after restarting possible the aggregted variables were not removed in setppc constraints
- fixed various small bugs in nonlinear expressions code

performance improvements:
- fasten propagation in cons_knapsack.c due to negated clique partitions
- recalculating only needed partitions in cons_knapsack.c, not always both
- calculation of node priority now also works when variable's relaxation value is equal to a bound
- fasten knapsack separation by replacing SCIPallocBufer(Array) through SCIPallocBlockMemory(Array)

SCIP version 2.0.1
==================

interface:
- allow access of transformed constraints in SCIP_STAGE_TRANSFORMED

performance improvements:
- SCIP with SoPlex as LP solver now uses auto pricing by default (start with devex, switch to steepest edge after some iterations);
  this fixes timeouts on instances where devex converges very slowly
- fixing lifting of new knapsack items which are negated items of already included items, this could lead to very long presolving
- fixed performance issue in presolving w.r.t. to computing the number of new fixings, aggregated, and so on before a 
  constraint handler presolver is called
- in case of adding constraints during pricing with initial flag set to TRUE, we add now these constraints 
  after the pricing round to the LP
- changed parameter values in clique separator in order to avoid very large branch-and-bound trees

fixed bugs:
- fixed bug in heur_subnlp when initialized starting values of a fixed variable in the NLP of the subscip
- fixed bugs in SCIPcopyConss: copy all active constraints (including disabled ones), *valid was not initialized to TRUE
- fixed bug in reader_mps: indicator constraints do not output the slack variables anymore